add more main elements

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <p class="maintext">Building connections between students who share a passion for Chinese language and culture since 2015</p>
 
     <div class="contactbox">
-        <p class="contacttext"><b>Email:</b>    claiduiuc@gmail.com</p>
+        <p class="contacttext"><b>Email:</b>      claiduiuc@gmail.com<button type="button" class="contactbutton" onclick="location.href='connect.html';">CONTACT</button></p>
     </div>
 </body>
 </html>
