about us carousel, begin board members

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <ul class="nav">
         <li class="nav" style="margin-left:130px"><a class="nav" href="index.html">Home</a></li>
         <li class="nav"><a class="nav" href="about.html">About Us</a></li>
+        <li class="nav"><a class="nav" href="board.html">Board</a></li>
         <li class="nav"><a class="nav" href="get_involved.html">Get Involved</a></li>
         <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
     </ul>
@@ -20,6 +21,7 @@
     <img src="/images/logo.png" class="mainimg"/>
     <h1 class="maintext">CLAID @ UIUC</h1>
     <p class="maintext">Building connections between students who share a passion for Chinese language and culture since 2015</p>
+    <p class="maintext">We welcome everybody of all majors, cultures, and interests!</p>
 
     <div class="contactbox">
         <p class="contacttext"><b>Email:</b>      claiduiuc@gmail.com<button type="button" class="contactbutton" onclick="location.href='connect.html';">CONTACT</button></p>
