--- a/src/about.html
+++ b/src/about.html
@@ -2,55 +2,96 @@
 <html>
 <head>
     <title>CLAID @ UIUC</title>
-    <meta http-equiv="content-type" content="text/html" charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
-    <!--bootstrap-->
-    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!--main style-->
     <link rel="stylesheet" href="/css/main_style.css">
     <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--carousel stuff-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!--carousel here-->
+      <!--nav bar-->
+    <ul class="nav">
+      <li class="nav" style="margin-left:130px"><a class="nav" href="index.html">Home</a></li>
+      <li class="nav"><a class="nav" href="about.html">About Us</a></li>
+      <li class="nav"><a class="nav" href="board.html">Board</a></li>
+      <li class="nav"><a class="nav" href="get_involved.html">Get Involved</a></li>
+      <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
+    </ul>
+
     <div id="aboutUsCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#aboutUsCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#aboutUsCarousel" data-slide-to="1"></li>
-        <li data-target="#aboutUsCarousel" data-slide-to="2"></li>
-      </ol>  
-      <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="/images/boba.png" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/images/cultural.png" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/images/performance.png" alt="Third slide">
-          </div>
+        <ol class="carousel-indicators">
+            <li data-target="#aboutUsCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#aboutUsCarousel" data-slide-to="1"></li>
+            <li data-target="#aboutUsCarousel" data-slide-to="2"></li>
+            <li data-target="#aboutUsCarousel" data-slide-to="3"></li>
+            <li data-target="#aboutUsCarousel" data-slide-to="4"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/performance.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/chinese corner.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/performance branch.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/mahjong.png" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/boba.png" alt="Third slide">
+            </div>
         </div>
         <a class="carousel-control-prev" href="#aboutUsCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#aboutUsCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
         </a>
-      </div>
-      <script type="text/javascript">
-        $(document).ready(function () {
-          $("#aboutUsCarousel").carousel({
-            interval: 3000,
-            pause: false,
-          });
+        <div class="mainTextBackground">
+          <h2 class="mainText">Meet our branches!</h2>
+    </div>
+    <!--carousel speed change-->
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $("#aboutUsCarousel").carousel({
+          interval: 4000,
+          pause: false,
         });
-      </script>
+      });
+    </script>
+
+    <br/>
+    <br/>
+    <!--branch boxes-->
+
+    </div class="container">
+      <div class="block">
+        <h1 class="blocktext">Social</h1>
+      </div>
+      <div class="block">
+        <h1 class="blocktext">Tutoring</h1>
+      </div>
+    <div>
+    <br/>
+    </div class="container">
+      <div class="block">
+        <h1 class="blocktext">Performance</h1>
+      </div>
+      <div class="block">
+        <h1 class="blocktext">Cultural</h1>
+      </div>
+    <div>
+
+
 </body>
 </html>
