--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,10 @@
 <head>
     <title>CLAID @ UIUC</title>
     <!--main style-->
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main_style.css">
+    <script type="javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <!--favicon-->
@@ -75,8 +78,8 @@
     <!--branch boxes-->
 
     </div class="container">
-      <div class="block">
-        <h1 class="blocktext">Social</h1>
+      <div class="block" data-toggle="modal" data-target="#branchModal">
+        <h1 class="blocktext" >Social</h1>
       </div>
       <div class="block">
         <h1 class="blocktext">Tutoring</h1>
@@ -92,6 +95,23 @@
       </div>
     <div>
 
+
+  <!-- Modal -->
+  <div class="modal fade" id="branchModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Social Branch</h4>
+        </div>
+        <div class="modal-body">
+          <p>Welcome to Social!</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
