--- a/src/board.html
+++ b/src/board.html
@@ -2,11 +2,16 @@
 <html>
 <head>
     <title>CLAID @ UIUC</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <!--main style-->
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main_style.css">
     <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <!--bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/images/logo.png">
 </head>
 <body>
     <!--nav bar-->
@@ -23,7 +28,7 @@
     <br/>
     <div class="board_container">
         <div class="board_div">
-            <img class="board_pic" src="/images/icej.jpg">
+            <img class="board_pic" src="/images/icej.jpg" data-toggle="modal" data-target="#myModal">
             <h3>Raymond Lin</h3>
             <p>President</p>
         </div>
@@ -53,6 +58,7 @@
             <p>Cultural Chair</p>
         </div>
     </div>
+    <br/>
     <h1 class="headers">Branch Members</h1>
     <br/>
     <div class="board_container">
@@ -67,5 +73,27 @@
             <p>Social Branch</p>
         </div>
     </div>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" style="text-align: center;"id="myModalLabel">Raymond Lin</h4>
+        </div>
+        <div class="modal-body">
+            <img class="modal_pic" src="/images/icej.jpg">
+            <p class="modal_question">Major: <span class="modal_answer">Gender studies</span></p>
+            <p class="modal_question">Year: <span class="modal_answer">Freshman</span></p>
+            <p class="modal_question">Why CLAID: <span class="modal_answer">I'm a munch</span></p>
+            <p class="modal_question">Hobbies: <span class="modal_answer">Ice spice</span></p>
+            <p class="modal_question">Fun fact: <span class="modal_answer">I play terraria</span></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
