get modal to show up for one

--- a/src/board.html
+++ b/src/board.html
@@ -31,7 +31,7 @@
     <script type="text/x-mustache" id="boardTemplate">
         {{#admin}}
         <div class="board_div">
-            <img class="board_pic" src="{{image}}" data-toggle="modal" data-target="#{{netid}}">
+            <img class="board_pic" src="{{image}}" data-bs-toggle="modal" data-bs-target="#{{netid}}">
             <h3>{{name}}</h3>
             <p>{{position}}</p>
         </div>
@@ -39,11 +39,11 @@
     </script>
     <script type="text/x-mustache" id="modalTemplate">
       {{#admin}}
-      <div class="modal fade" id="{{netid}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
+      <div class="modal fade" id="{{netid}}">
+        <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" style="text-align: center;"id="myModalLabel">{{name}}</h4>
+              <h4 class="modal-title">{{name}}</h4>
             </div>
             <div class="modal-body">
                 <img class="modal_pic" src="{{image}}">
@@ -55,7 +55,7 @@
                 <p class="modal_question">Fun fact: <span class="modal_answer">{{fact}}</span></p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
