--- a/src/about.html
+++ b/src/about.html
@@ -37,19 +37,19 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/performance.png" alt="First slide">
+                <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/performance.png" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/chinese corner.jpg" alt="Third slide">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/chinese corner.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/performance branch.png" alt="Second slide">
+                <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/performance branch.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/mahjong.png" alt="Third slide">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/mahjong.png" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/boba.png" alt="Third slide">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/boba.png" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#aboutUsCarousel" role="button" data-slide="prev">
