add connect page components

--- a/src/about.html
+++ b/src/about.html
@@ -132,7 +132,7 @@
           <h4 class="modal-title" id="myModalLabel">Performance Branch</h4>
         </div>
         <div class="modal-body">  
-          <p style="text-align: center;">Welcome to Performance! We are in charge of hosting our annual Chinese New Year Showcase, and it features our very own dancers/choreographers as well as various other RSO's and their performances! From organizing showcase logistics, participating in dances, choreographing, and working with other RSO's, it's a really incredible experience.</p>        
+          <p style="text-align: center;">Welcome to Performance Branch! We host CLAID's annual Chinese New Year Showcase through different styles of dances organized by CLAID, as well as inviting other RSOs to perform with us. Throughout the year we have weekly practices, fun performance socials, dance workshops, and more!</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
