--- a/src/connect.html
+++ b/src/connect.html
@@ -17,6 +17,45 @@
         <li class="nav"><a class="nav" href="get_involved.html">Get Involved</a></li>
         <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
     </ul>
-    
+    <br>
+    <h2 class="headers">Feel free to join us on these platforms</h2>
+    <div style="display: flex; text-align: center;">
+        <div style="flex: 25%; margin-top: 55px;">
+            <a href="https://discord.gg/aKN9AUHn"><img src="/images/discord2.gif" class="connectdiv" style="width: 110px; height: 110px; object-fit: cover;"></a>
+        </div>
+        <div style="flex: 25%;">
+            <a href="https://www.instagram.com/claiduiuc/?hl=en"><img src="/images/insta.gif"  class="connectdiv" style="width: 220px; height: 220px; object-fit: cover;"></a>
+        </div>
+        <div class="tooltip" style="flex: 25%;">
+            <img src="/images/wechat.gif" class="connectdiv" style="width: 200px; height: 200px; object-fit: cover;">
+            <span class="tooltiptext">Please reach out to us for the QR Code to join!</span>
+        </div>
+        <div style="flex: 25%;">
+            <a href = "mailto: claiduiuc@gmail.com"><img src="/images/email.gif" class="connectdiv" style="width: 200px; height: 200px; object-fit: cover;"></a>
+        </div>
+    </div>
+    <!--feedback form-->
+    <h2 class="headers">Or contact us here!</h2>
+    <br>
+    <div>
+        <form action="mailto:claiduiuc@gmail.com" method="post" enctype="text/plain">
+            <div style="display: flex; margin-left: 530px;">
+                <div style="padding-right: 50px;">
+                    <p class="formtext" style="flex: 25%;"><label for="name">Name</label></p>
+                    <textarea id="name"></textarea>
+                </div>
+                <div>
+                    <p class="formtext" style="flex: 25%;"><label for="email">Email</label></p>
+                    <textarea id="email"></textarea>
+                </div>
+            </div>
+            <p class="formtext" style="flex: 25%;"><label for="message">Message</label></p>
+            <textarea id="message" style="width: 500px; height: 200px; margin: auto;"></textarea>
+            <br>
+            <br>
+            <input type="submit" value="Submit" class="formbutton">
+        </form>
+    </div>
+
 </body>
 </html>
