add images to about us

--- a/src/about.html
+++ b/src/about.html
@@ -46,7 +46,10 @@
               <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/lantern2.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/pizza.jpg" alt="Fourth slide">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/performance.png" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/peeeeeza.png" alt="Fourth slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#aboutUsCarousel" role="button" data-slide="prev">
@@ -74,20 +77,19 @@
     <br/>
     <!--branch boxes-->
     </div class="container">
-      <div class="block" data-toggle="modal" data-target="#socialModal">
+      <div class="block" data-toggle="modal" data-target="#socialModal" style="background-image: url(/images/social/gingerbread.png); background-size: cover;">
         <h1 class="blocktext" >Social</h1>
-        
       </div>
-      <div class="block" data-toggle="modal" data-target="#tutoringModal">
+      <div class="block" data-toggle="modal" data-target="#tutoringModal" style="background-image: url(/images/events/chinese\ corner.jpg); background-size: cover;">
         <h1 class="blocktext">Tutoring</h1>
       </div>
     <div>
     <br/>
     </div class="container">
-      <div class="block" data-toggle="modal" data-target="#performanceModal">
+      <div class="block" data-toggle="modal" data-target="#performanceModal" style="background-image: url(/images/performance/cpop.png); background-size: cover;">
         <h1 class="blocktext">Performance</h1>
     </div>
-    <div class="block" data-toggle="modal" data-target="#culturalModal">
+    <div class="block" data-toggle="modal" data-target="#culturalModal" style="background-image: url(/images/cultural/tangyuan.png); background-size: cover;">
         <h1 class="blocktext">Cultural</h1>
     </div>
 
