organize image folders

--- a/src/about.html
+++ b/src/about.html
@@ -80,7 +80,7 @@
       <div class="block" data-toggle="modal" data-target="#socialModal" style="background-image: url(/images/social/gingerbread.png); background-size: cover;">
         <h1 class="blocktext" >Social</h1>
       </div>
-      <div class="block" data-toggle="modal" data-target="#tutoringModal" style="background-image: url(/images/events/chinese\ corner.jpg); background-size: cover;">
+      <div class="block" data-toggle="modal" data-target="#tutoringModal" style="background-image: url(/images/tutoring/chinese\ corner.png); background-size: cover;">
         <h1 class="blocktext">Tutoring</h1>
       </div>
     <div>
