add points to nav bar

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         <li class="nav"><a class="nav" href="board.html">Board</a></li>
         <li class="nav"><a class="nav" href="get_involved.html">Get Involved</a></li>
         <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
+        <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
     
     <img src="/images/logo.png" class="mainimg"/>
