--- a/src/board.html
+++ b/src/board.html
@@ -23,6 +23,7 @@
         <li class="nav"><a class="nav" href="board.html">Board</a></li>
         <li class="nav"><a class="nav" href="get_involved.html">Get Involved</a></li>
         <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
+        <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
     <br/>
     <h1 class="headers">Meet the board!</h1>
