--- a/src/points.html
+++ b/src/points.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
     <!--main style-->
     <link rel="stylesheet" href="/css/main_style.css">
+    <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,6 +18,5 @@
         <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
         <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
-
 </body>
 </html>
