--- a/src/connect.html
+++ b/src/connect.html
@@ -22,17 +22,17 @@
     <h2 class="headers">Feel free to join us on these platforms</h2>
     <div style="display: flex; text-align: center;">
         <div style="flex: 25%; margin-top: 55px;">
-            <a href="https://discord.gg/aKN9AUHn"><img src="/images/discord2.gif" class="connectdiv" style="width: 110px; height: 110px; object-fit: cover;"></a>
+            <a href="https://discord.gg/aKN9AUHn" target="_blank"><img src="/images/discord2.gif" class="connectdiv" style="width: 110px; height: 110px; object-fit: cover;"></a>
         </div>
         <div style="flex: 25%;">
-            <a href="https://www.instagram.com/claiduiuc/?hl=en"><img src="/images/insta.gif"  class="connectdiv" style="width: 220px; height: 220px; object-fit: cover;"></a>
+            <a href="https://www.instagram.com/claiduiuc/?hl=en" target="_blank"><img src="/images/insta.gif"  class="connectdiv" style="width: 220px; height: 220px; object-fit: cover;"></a>
         </div>
         <div class="tooltip" style="flex: 25%;">
             <img src="/images/wechat.gif" class="connectdiv" style="width: 200px; height: 200px; object-fit: cover;">
             <span class="tooltiptext">Please reach out to us for the QR Code to join!</span>
         </div>
         <div style="flex: 25%;">
-            <a href = "mailto: claiduiuc@gmail.com"><img src="/images/email.gif" class="connectdiv" style="width: 200px; height: 200px; object-fit: cover;"></a>
+            <a href = "mailto: claiduiuc@gmail.com" target="_blank"><img src="/images/email.gif" class="connectdiv" style="width: 200px; height: 200px; object-fit: cover;"></a>
         </div>
     </div>
     <!--feedback form-->
