--- a/src/points.html
+++ b/src/points.html
@@ -23,9 +23,13 @@
     <!--check in stuff-->
     <div>
         <form role="form" onsubmit="setTimeout(function(){window.location.reload();},10);">
-            <div style="display: flex; margin-left: 530px;">
+            <div style="display: flex; margin-left: 430px;">
                 <div style="padding-right: 50px;">
-                    <p class="formtext"><label for="name">Name</label></p>
+                    <p class="formtext"><label for="name">First Name</label></p>
+                    <textarea type="name" name="name"></textarea>
+                </div>
+                <div style="padding-right: 50px;">
+                    <p class="formtext"><label for="name">Last Name</label></p>
                     <textarea type="name" name="name"></textarea>
                 </div>
                 <div>
@@ -59,7 +63,7 @@
             <tr>
                 <td>Raymond</td>
                 <td>8</td>
-              </tr>
+            </tr>
           </table>
     </div>
 
