add very basic footer to each page

--- a/src/board.html
+++ b/src/board.html
@@ -63,5 +63,10 @@
     <br>
     <div class="board_container" id="members">
     </div>
+
+    <footer>
+      <p class="ftext" style="float:left;">claid @ uiuc</p>
+      <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
+  </footer>
 </body>
 </html>
