--- a/src/get_involved.html
+++ b/src/get_involved.html
@@ -18,5 +18,9 @@
         <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
 
+    <footer>
+        <p class="ftext" style="float:left;">claid @ uiuc</p>
+        <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
+    </footer>
 </body>
 </html>
