--- a/src/points.html
+++ b/src/points.html
@@ -68,7 +68,10 @@
     </div>
 
     
-
+    <footer>
+        <p class="ftext" style="float:left;">claid @ uiuc</p>
+        <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
+    </footer>
 
 </body>
 </html>
