--- a/src/about.html
+++ b/src/about.html
@@ -159,7 +159,9 @@
         </div>
       </div>
     </div>
-  
-
+    <footer>
+      <p class="ftext" style="float:left;">claid @ uiuc</p>
+      <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
+    </footer>
 </body>
 </html>
