--- a/src/connect.html
+++ b/src/connect.html
@@ -57,6 +57,10 @@
             <input type="submit" value="Submit" class="formbutton">
         </form>
     </div>
-
+    
+    <footer>
+        <p class="ftext" style="float:left;">claid @ uiuc</p>
+        <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
+    </footer>
 </body>
 </html>
