Implemented a basic "get_involved" web page

--- a/src/get_involved.html
+++ b/src/get_involved.html
@@ -17,6 +17,49 @@
         <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
         <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
-
+    <br>
+    <!-- Grid Layout div with a total of 5 items -->
+    <div class="grid-container">
+        <div class="item1">
+            <h1 class = "headers">Involvment Opportunities</h1>
+            <p>
+                Whether you're eager to enhance your skills, make new friends, or engage in cultural exchange, CLAID has something special for everyone. 
+                <!-- Join us for 1-on-1 peer tutoring sessions to receive personalized Chinese language support, 
+                stay up-to-date with our Upcoming Events to explore enriching experiences, 
+                showcase your talents at our Lunar Showcase, 
+                or immerse yourself in the captivating Chinese language exchange at Chinese Corner. 
+                Discover endless possibilities to grow, connect, and contribute with us. -->
+            </p>
+        </div>
+        <div class="item2">
+            <!-- Need to make an actual chinese corner page -->
+            <h3><a class="involved_headers" href="https://claid.club/services/chinese-corner/" target= "_blank">Chinese Corner</a></h3>
+            <p class="involved_paragraph">
+                Bolster your Chinese conversational skills at our weekly language table!
+            </p>
+        </div>
+        <div class="item3">
+            <!-- Need to make an actual upcoming events page -->
+            <h3><a class="involved_headers" href="https://claid.club/services/events/" target= "_blank">Upcoming Events</a></h3>
+            <p class="involved_paragraph">
+                Learn more about Chinese culture and meet new friends at our Social and Cultural events!
+            </p>
+        </div>  
+        <div class="item4">
+            <!-- Need to make an actual showcase  page -->
+            <h3><a class="involved_headers" href="https://claid.club" target= "_blank">New Year Showcase</a></h3>
+            <p class="involved_paragraph">
+                A yearly showcase put on by CLAID in order to celebrate the Chinese New Year.
+            </p>
+        </div>
+        <div class="item5">
+            <!-- Need to make an actual 1 on 1 page -->
+            <h3><a class="involved_headers" href="https://claid.club/services/peer-tutoring/" target= "_blank">1-on-1 Tutoring</a></h3>
+            <p class="involved_paragraph">
+                Work one-on-one with a tutor to strengthen your Chinese language skills!
+            </p>
+        </div>
+      </div>
+      <h3 class="headers">Click on an opportunity to learn more!</h3>
 </body>
 </html>
