--- a/src/about.html
+++ b/src/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/main_style.css">
     <script type="javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script type="javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    
     <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <!--favicon-->
@@ -27,43 +28,25 @@
       <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
       <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
-
+    <!-- About Us Carousel -->
     <div id="aboutUsCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#aboutUsCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#aboutUsCarousel" data-slide-to="1"></li>
-            <li data-target="#aboutUsCarousel" data-slide-to="2"></li>
-            <li data-target="#aboutUsCarousel" data-slide-to="3"></li>
-            <li data-target="#aboutUsCarousel" data-slide-to="4"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/chinese corner.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/performance branch.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/lantern2.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/performance.png" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" style="max-height:500px; width: auto; object-fit: cover;" src="/images/events/peeeeeza.png" alt="Fourth slide">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#aboutUsCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#aboutUsCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-        <div class="mainTextBackground">
-          <h2 class="mainText">Meet our branches!</h2>
+      <ol class="carousel-indicators"></ol>
+      <div class="carousel-inner"></div>
+      <a class="carousel-control-prev" href="#aboutUsCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#aboutUsCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+      <div class="mainTextBackground">
+        <h2 class="mainText">Meet our branches!</h2>
+      </div>
     </div>
+    <!-- Script that adds images to the carousel -->
+    <script src="/js/about_us_carousel.js"></script>
+    
     <!--carousel speed change-->
     <script type="text/javascript">
       $(document).ready(function () {
