--- a/src/connect.html
+++ b/src/connect.html
@@ -39,7 +39,7 @@
     <h2 class="headers">Or contact us here!</h2>
     <br>
     <div>
-        <form role="form" action="https://formspree.io/f/mqkonnbr" method="POST" enctype="text/plain">
+        <form role="form" value = "Refresh" onclick="history.go(0)">
             <div style="display: flex; margin-left: 530px;">
                 <div style="padding-right: 50px;">
                     <p class="formtext" style="flex: 25%;"><label for="name">Name</label></p>
@@ -57,7 +57,8 @@
             <input type="submit" value="Submit" class="formbutton">
         </form>
     </div>
-    
+    <br>
+    <br>
     <footer>
         <p class="ftext" style="float:left;">claid @ uiuc</p>
         <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
