--- a/src/board.html
+++ b/src/board.html
@@ -19,11 +19,11 @@
     <!--nav bar-->
     <ul class="nav">
         <li class="nav" style="margin-left:130px"><a class="nav" href="index.html">Home</a></li>
-        <li class="nav"><a class="nav" href="src/about.html">About Us</a></li>
-        <li class="nav"><a class="nav" href="src/board.html">Board</a></li>
-        <li class="nav"><a class="nav" href="src/get_involved.html">Get Involved</a></li>
-        <li class="nav"><a class="nav" href="src/connect.html">Connect</a></li>
-        <li class="nav"><a class="nav" href="src/points.html">Points</a></li>
+        <li class="nav"><a class="nav" href="about.html">About Us</a></li>
+        <li class="nav"><a class="nav" href="board.html">Board</a></li>
+        <li class="nav"><a class="nav" href="get_involved.html">Get Involved</a></li>
+        <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
+        <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
     <br/>
     <h1 class="headers">Meet the board!</h1>
