--- a/src/board.html
+++ b/src/board.html
@@ -3,14 +3,14 @@
 <head>
     <title>CLAID @ UIUC</title>
     <!--main style-->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main_style.css">
     <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <!--bootstrap-->
-    <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../node_modules/mustache/mustache.min.js"></script>
+    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./node_modules/mustache/mustache.min.js"></script>
     <script type="text/javascript" src="/js/board.js"></script>
     <script type="text/javascript" src="/js/exec.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
