--- a/src/about.html
+++ b/src/about.html
@@ -21,7 +21,7 @@
 <body>
       <!--nav bar-->
     <ul class="nav">
-      <li class="nav" style="margin-left:130px"><a class="nav" href="index.html">Home</a></li>
+      <li class="nav" style="margin-left:130px"><a class="nav" href="/index.html">Home</a></li>
       <li class="nav"><a class="nav" href="about.html">About Us</a></li>
       <li class="nav"><a class="nav" href="board.html">Board</a></li>
       <li class="nav"><a class="nav" href="get_involved.html">Get Involved</a></li>
