--- a/src/points.html
+++ b/src/points.html
@@ -19,6 +19,7 @@
         <li class="nav"><a class="nav" href="connect.html">Connect</a></li>
         <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
+    <h2 class="pointheader">THIS PAGE IS STILL IN WORK</h2>
     <h2 class="pointheader">Check in!</h2>
     <!--check in stuff-->
     <div>
